互換性のない変更を実施。
シリアライズフォーマットを全面的に互換性の無い物へ変更。

--- a/Library.Net.Amoeba/Library.Net.Amoeba.csproj
+++ b/Library.Net.Amoeba/Library.Net.Amoeba.csproj
@@ -65,14 +65,20 @@
     <Compile Include="AmoebaConverter.cs" />
     <Compile Include="AmoebaManager.cs" />
     <Compile Include="Cache\BitmapManager.cs" />
-    <Compile Include="Information\Store\Box.cs" />
-    <Compile Include="Information\Store\BoxCollection.cs" />
+    <Compile Include="Cache\Seed\Key.cs" />
+    <Compile Include="Cache\Seed\KeyCollection.cs" />
+    <Compile Include="Cache\Seed\KeywordCollection.cs" />
+    <Compile Include="Cache\_Interface\Seed\IKey.cs" />
+    <Compile Include="Cache\Seed\Metadata.cs" />
+    <Compile Include="Cache\Seed\MetadataCollection.cs" />
+    <Compile Include="Cache\_Interface\Seed\IMetadata.cs" />
     <Compile Include="Information\Link\Link.cs" />
     <Compile Include="Information\Link\LinkCollection.cs" />
+    <Compile Include="Information\Store\Box.cs" />
+    <Compile Include="Information\Store\BoxCollection.cs" />
     <Compile Include="Information\Store\Store.cs" />
     <Compile Include="Information\Store\StoreCollection.cs" />
     <Compile Include="Information\_Interface\Link\ILink.cs" />
-    <Compile Include="Cache\_Interface\Seed\IKeywords.cs" />
     <Compile Include="Information\_Interface\Store\IStore.cs" />
     <Compile Include="Information\_Interface\Store\IBox.cs" />
     <Compile Include="BackgroundDownloadItem.cs" />
@@ -92,24 +98,20 @@
     <Compile Include="ServerManager.cs" />
     <Compile Include="Cache\Seed\Group.cs" />
     <Compile Include="Cache\Seed\GroupCollection.cs" />
-    <Compile Include="Cache\Seed\Key.cs" />
-    <Compile Include="Cache\Seed\KeyCollection.cs" />
     <Compile Include="Cache\_Interface\ICompressionAlgorithm.cs" />
     <Compile Include="Cache\_Interface\ICorrectionAlgorithm.cs" />
     <Compile Include="Cache\_Interface\ICryptoAlgorithm.cs" />
     <Compile Include="Cache\_Interface\Seed\IGroup.cs" />
     <Compile Include="Cache\_Interface\IHashAlgorithm.cs" />
-    <Compile Include="Cache\_Interface\Seed\IKey.cs" />
     <Compile Include="Cache\_Interface\Seed\IIndex.cs" />
     <Compile Include="Cache\_Interface\Seed\ISeed.cs" />
     <Compile Include="Cache\Seed\Index.cs" />
     <Compile Include="Cache\Seed\IndexCollection.cs" />
     <Compile Include="Cache\Seed\Seed.cs" />
     <Compile Include="Cache\Seed\SeedCollection.cs" />
-    <Compile Include="Cache\Seed\KeywordCollection.cs" />
     <Compile Include="Cache\CacheManager.cs" />
-    <Compile Include="Cache\CacheManagerStreamReader.cs" />
-    <Compile Include="Cache\CacheManagerStreamWriter.cs" />
+    <Compile Include="Cache\CacheManager_StreamReader.cs" />
+    <Compile Include="Cache\CacheManager_StreamWriter.cs" />
     <Compile Include="NodeCollection.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="UploadItem.cs" />
